<resources>
    <string name="app_name">Clicker</string>
    <string name="start_quiz">Let\'s do a quiz!</string>
    <string name="start_button">click to start</string>

    <string name="log_in">Log in</string>

    <string name="q1_title">Question 1:</string>
    <string name="q2_title">Question 2:</string>
    <string name="q3_title">Question 3:</string>
    <string name="q4_title">Question 4:</string>

    <string name="q1">If the base radius of a cone is doubled and its height is halved，the volume will be </string>
    <string name="q2">999/330+3=</string>
    <string name="q3">How many animals are there in the picture?</string>
    <string name="q4">Puzzles to patterns: 0, 3, 8, 15, ()</string>

    <string name="q1a">twice of the origin</string>
    <string name="q1b">half of the origin</string>
    <string name="q1c">remain the same</string>
    <string name="q1d">None of the above</string>

    <string name="q2a">6.02</string>
    <string name="q2b">3</string>
    <string name="q2c">6</string>
    <string name="q2d">9</string>

    <string name="q3a">9</string>
    <string name="q3b">10</string>
    <string name="q3c">11</string>
    <string name="q3d">12</string>

    <string name="q4a">21</string>
    <string name="q4b">24</string>
    <string name="q4c">26</string>
    <string name="q4d">30</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="finish">Finish</string>

    <string name="finishText">Good job!</string>
    <string name="result"> You finished the quiz!</string>
    <string name="nextInstr">Please wait for the next instruction.</string>
</resources>